--- a/machine.html
+++ b/machine.html
@@ -40,22 +40,22 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://rokk3r.workable.com/j/1701662182'>Rokk3r - Jobs: Machine Learning Engineer - Apply online</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Bogot?</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/varomoney/9089d320-13b2-43d9-bfc1-973afaade12d'>Varo Money - Senior Machine Learning Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/varomoney/9089d320-13b2-43d9-bfc1-973afaade12d'>Varo Money - Senior Machine Learning Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692370321-praktikant-in-im-bereich-hochautomatisiertes-fahren-machine-learning-data-analysis'>Bosch Group Praktikant*in im Bereich hochautomatisiertes Fahren - Machine Learning / Data-Analysis | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692370321-praktikant-in-im-bereich-hochautomatisiertes-fahren-machine-learning-data-analysis'>Bosch Group Praktikant*in im Bereich hochautomatisiertes Fahren - Machine Learning / Data-Analysis | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=otZA8fwU&__jvst=Employee+Referral&__jvsd=soLEwfw3&__jvsc=Twitter&bid=n6eIVLwd'>ServiceNow Careers - Staff Machine Learning Engineer - NLU Platform</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=otZA8fwU&__jvst=Employee+Referral&__jvsd=soLEwfw3&__jvsc=Twitter&bid=n6eIVLwd'>ServiceNow Careers - Staff Machine Learning Engineer - NLU Platform</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://smartnews.workable.com/j/2381671B43'>SmartNews, Inc. - Jobs: Principal/Senior Staff Machine Learning Scientist, AI Foundation - Apply online</a></h5> 
+<h5><a href='https://smartnews.workable.com/j/2381671B43'>SmartNews, Inc. - Jobs: Principal/Senior Staff Machine Learning Scientist, AI Foundation - Apply online</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -71,7 +71,7 @@
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/A10570EDDA'>riskmethods - Jobs: Software Engineer Machine Learning (m/f/d ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/A10570EDDA'>riskmethods - Jobs: Software Engineer Machine Learning (m/f/d ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of Software Engineer Machine Learning (m/f/d) at 
 riskmethods.</p>
@@ -151,7 +151,7 @@ Engineering - Infrastructure. Full-time. Submit your application. Resume/CV ?.</
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://genie-ai.workable.com/j/EAC94C73A0'>Genie AI - Jobs: Machine Learning Researcher - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://genie-ai.workable.com/j/EAC94C73A0'>Genie AI - Jobs: Machine Learning Researcher - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -171,7 +171,7 @@ Engineering - Infrastructure. Full-time. Submit your application. Resume/CV ?.</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://advertima.join.com/jobs/261690-computer-vision-and-machine-learning-engineer-m-f-in-tech-startup-zh-sg'>Computer Vision & Machine Learning Engineer (m/f) in Tech-Startup</a></h5> 
+<h5><a href='https://advertima.join.com/jobs/261690-computer-vision-and-machine-learning-engineer-m-f-in-tech-startup-zh-sg'>Computer Vision & Machine Learning Engineer (m/f) in Tech-Startup</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Advertima AG has a job opening for Computer Vision & Machine Learning 
 Engineer (m/f) in Tech-Startup (ZH/SG) in St. Gallen (published: 27.06.2019).</p>
@@ -216,7 +216,7 @@ team at Vimeo is building AI-driven tools to help anyone who wants to make a?...
 <p>1 day ago ... Description. Machine Learning / Artificial Intelligence Engineer. Are you ready for 
 a career change to somewhere where you can really make a difference,?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/centralway/job/oNrsafwA'>Numbrs Personal Finance AG Careers - Machine Learning Engineer ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/centralway/job/oNrsafwA'>Numbrs Personal Finance AG Careers - Machine Learning Engineer ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Numbrs engineers are innovators, problem-solvers, and hard-workers who are 
 building solutions in big data, mobile technology and much more. We look for?...</p>
@@ -255,7 +255,7 @@ and data science. A successful candidate should also have previous?...</p>
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/retailmenot/4ff9f34a-9d6e-4919-b84c-3e370b7fd53f'>RetailMeNot - Principal Software Engineer, Machine Learning</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/retailmenot/4ff9f34a-9d6e-4919-b84c-3e370b7fd53f'>RetailMeNot - Principal Software Engineer, Machine Learning</a></h5> 
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -275,7 +275,7 @@ and data science. A successful candidate should also have previous?...</p>
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/stratus/jobs/machine-learning-researcher-b1I8DsJhCr6yRTcR_n82lY'>Machine Learning Researcher #0458 job at Stratus Solutions in College Park, MD, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/stratus/jobs/machine-learning-researcher-b1I8DsJhCr6yRTcR_n82lY'>Machine Learning Researcher #0458 job at Stratus Solutions in College Park, MD, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -315,7 +315,7 @@ knowledge and outstanding database, data analytics and programming skills.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/phdata/jobs/1461947'>Job Application for Machine Learning Operations Engineer at phData</a></h5> 
+<h5><a href='https://boards.greenhouse.io/phdata/jobs/1461947'>Job Application for Machine Learning Operations Engineer at phData</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -391,7 +391,7 @@ job. Dor is a retail analytics startup that uses a first-of-its-kind hardware an
 <p>6 ?? ... Apply online for the job of Software Engineer, Machine Learning [New Graduate 
 Position] at Mercari, inc.</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/labelbox/024d6557-5400-47a2-b68f-1abe3136b20d'>Labelbox - Head of Machine Learning</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/labelbox/024d6557-5400-47a2-b68f-1abe3136b20d'>Labelbox - Head of Machine Learning</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -403,7 +403,7 @@ Position] at Mercari, inc.</p>
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/glovo/jobs/4354654002'>Job Application for Senior Backend Engineer - Machine Learning Platform at Glovo</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/glovo/jobs/4354654002'>Job Application for Senior Backend Engineer - Machine Learning Platform at Glovo</a></h5> 
 <p><span class="badge badge-light">Barcelona Barcelona</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -416,7 +416,7 @@ passionate about having a positive impact on the world. You are enthusiastic?...
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/criteo/b6d1de19-5e8c-4372-a234-48d3566f29f0'>Criteo - Lead Developer - Software Engineering &amp; Machine Learning</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/criteo/b6d1de19-5e8c-4372-a234-48d3566f29f0'>Criteo - Lead Developer - Software Engineering &amp; Machine Learning</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
